infrastructure/argo-workflows/argo-fix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
  namespace: argo
spec:
  template:
    spec:
      containers:
      - name: argo-server
        args:
        - server
        - --auth-mode=server  
        - --auth-mode=client  
        - --secure=false      
        readinessProbe:
          httpGet:
            path: /
            port: 2746
            scheme: HTTP
